src/main/webapp/resources/css/mobile/global.css
/* ... */
.pm-top-gr {
    border: 0;
    margin: 0;
    padding: 0;
}

.pm-top-gr-hdr {
    /*background: #c6cacc url(#{facesContext.externalContext.requestContextPath}/images/pmenu_bg.png) left top repeat-x;*/
    padding: 3px 1px 2px 3px;
}

.rf-pm-top-gr {
    border-color: white;
    margin-bottom: 1px;
}

.rf-pm .rf-pm-top-gr-hdr:hover {
    /*background: #c6cacc url(#{facesContext.externalContext.requestContextPath}/images/pmenu_bg.png) left top repeat-x;*/
}

.rf-pm .rf-pm-top-gr-ico {
    display: none;
}

.rf-pm .rf-pm-top-gr-lbl {
    color: #273945;
    margin-left: 4px;
    font-size: 13px;
    line-height: 33px;
}

.rf-pm .rf-pm-top-gr-lbl:hover {
    color: #5a8eba;
}

.rf-pm-exp {
    background: #ffffff;
}

.rf-pm-exp .rf-pm-itm {
    border: 0;
    border-bottom: 1px solid #dddddd;
}

.rf-pm-exp .rf-pm-itm:hover {
    background: none;
}

.rf-pm-exp .rf-pm-itm-lbl:hover {
    color: #5f9cd0;
}

.rf-pm-exp .rf-pm-itm-sel,.rf-pm-exp .rf-pm-itm-sel:hover { /*background:#e3e8ef;*/

}

.rf-pm-exp .rf-pm-itm-lbl {
    color: #305f7b;
}

.rf-pm-exp .rf-pm-itm-ico {
    padding: 0 !important;
    width: 5px;
}

.rf-pm-itm, .rf-pm-itm-sel {
    padding:  8px 0 8px 0;
}

.rf-pm-itm-lbl {
    font-size: 13px
}

/*************************************************
RichFaces tabPanel styles overwriting
*************************************************/
nav .rf-tab-hdr-tabline-vis {
    background: #ebf6fd;
    border: 0;
    height: 31px;
    padding: 0;
}

nav .rf-tab-hdr {
    border: 1px solid #dddddd;
    padding: 6px 10px 0;
    margin-right: 3px;
}

nav .rf-tab-hdr-act {
    background: #ffffff;
    border-bottom: 0;
    color: #5F9CD0;
}

nav .rf-tab-hdr-act .rf-tab-lbl {
    font-weight: bold;
}

nav .rf-tab-hdr-inact {
    /*background: #c6cacc url(#{facesContext.externalContext.requestContextPath}/images/pmenu_bg.png) left top repeat-x;*/
    border: 1px solid #bec3c7;
}

nav .rf-tab-hdr-spcr {
    border-bottom: 1px solid #dddddd;
    padding: 0 3px 0 0;
}

nav .rf-tab-lbl {
    font: normal 12px "Lucida Sans Unicode", "Lucida Grande", Geneva, Verdana, Arial, sans-serif;
}

textarea[disabled],input[type="text"][disabled],input[type="password"][disabled],select[disabled] {
    -webkit-text-fill-color: #B6AD84;
}

/*************************************************
RichFaces input styles overwriting
*************************************************/

textarea, input[type="text"], input[type="password"], select {
    font-size: 16px;
    padding: .4em;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
}

button, input[type="reset"], input[type="submit"], input[type="button"] {
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    font-size: 16px;
    padding: .4em;
}

/*************************************************
inputNumberSlider
*************************************************/
.rf-insl-trc {
    height:30px;

}

.rf-insl-hnd, .rf-insl-hnd-dis, .rf-insl-dec, .rf-insl-inc, .rf-insl-dec-dis, .rf-insl-inc-dis {
/*display: inline-block;*/
/*width: 27px;*/
/*height: 7px;*/
}

.rf-insl-hnd,
.rf-insl-hnd-sel,
.rf-insl-hnd-dis {
    width: 28px;
    height: 28px;
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    background-image: none;
    /*padding: .6em 25px;*/
    display: block;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    position: relative;
    zoom: 1;
    border: 1px solid #CCC;
    background: #EEE;
    font-weight: bold;
    color: #444;
    text-shadow: 0 1px 1px #F6F6F6;
    background-image: -webkit-gradient(linear,left top,left bottom,from(#fdfdfd),to(#eee));
    background-image: -webkit-linear-gradient(top,#fdfdfd,#eee);
    background-image: -moz-linear-gradient(top,#fdfdfd,#eee);
    background-image: -ms-linear-gradient(top,#fdfdfd,#eee);
    background-image: -o-linear-gradient(top,#fdfdfd,#eee);
    background-image: linear-gradient(top,#fdfdfd,#eee);
    border-image: initial;
}

.rf-insl-hnd-sel {
    background-image: -webkit-gradient(linear,left top,left bottom,from(#ccc),to(#eee));
    background-image: -webkit-linear-gradient(top,#ccc,#eee);
    background-image: -moz-linear-gradient(top,#ccc,#eee);
    background-image: -ms-linear-gradient(top,#ccc,#eee);
    background-image: -o-linear-gradient(top,#ccc,#eee);
    background-image: linear-gradient(top,#ccc,#eee);
    border-image: initial;
}

.rf-insl-hnd, .rf-insl-hnd-dis {
    vertical-align: top;
}

/*************************************************
rich:collapsibleSubTable
*************************************************/

.rf-dt-c {
    position: relative;
    padding: 4px 4px 4px 16px;
}

.rf-csttg-exp {
    position: absolute;
    left: 0;
    width: 100%;
}

.rf-csttg-colps {
    position: absolute;
    left: 0;
    width: 100%;
}

/*************************************************
rich:dataScroller
*************************************************/

td.acent {
    padding: 1px;
}

.rf-ds-btn {
    padding: 10px;
}

.rf-ds-nmb-btn {
    padding:  10px;
}

/*************************************************
rich:tree
*************************************************/
.rf-trn-hnd {
    padding: 7px 0 7px 0;
}

.rf-trn-lbl {
    font-size: 1.2em;
}

/*************************************************
rich:popupPanel
*************************************************/
.rf-pp-hdr-cntrls {
    font-size: 16px;
}
/*Login panel attachment*/
tr.rf-tb-cntr td a{
    font-size: 16px;
}

.rf-tb {
    height:30px;
}

.rf-tb-itm {
    padding: 5px 8px;
}

/*************************************************
rich:toolbar
*************************************************/
.rf-tb-sep-grid {
   height: 55%;
}

/*************************************************
rich:message
*************************************************/
.rf-msg-det, .rf-msgs-det {
    display: inline;
    font-size: 14px;
}
/* ... */

